--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -259,7 +259,9 @@ services:
       - ./data/nifi:/opt/nifi/nifi-current/flowfile_repository
       - ./data/util:/util
     environment:
-      NIFI_WEB_HTTP_PORT: "9090"
+      NIFI_WEB_HTTP_PORT: 9090
+      NIFI_CLUSTER_IS_NODE: false
+      NIFI_SENSITIVE_PROPS_KEY: '12345678901234567890A'  
     ports:
       - "9090:9090"
       - "8443:8443"
